Adding additional smt solvers

--- a/StartNN.ipynb
+++ b/StartNN.ipynb
@@ -2,35 +2,246 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "start_time": "2024-11-09T20:40:20.032591Z",
+     "end_time": "2024-11-09T20:40:21.597630Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: z3-solver in /Users/smander/projects/PHD/DNN/venv/lib/python3.9/site-packages (4.10.2.0)\r\n"
+     ]
+    }
+   ],
    "source": [
-    "import symbolic as symbolic\n",
-    "from z3 import Int, Solver\n",
-    "\n",
-    "# Define symbolic integer variables\n",
-    "x = Int('x')\n",
-    "y = Int('y')\n",
-    "\n",
-    "# Create a solver and add constraints\n",
-    "s = Solver()\n",
-    "s.add(x + y == 10)\n",
-    "s.add(x > 0, y > 0)\n",
-    "\n",
-    "# Check for a solution\n",
-    "if s.check() == z3.sat:\n",
-    "    solution = s.model()\n",
-    "    print(\"Solution found:\", solution)\n",
-    "else:\n",
-    "    print(\"No solution satisfies the constraints.\")\n"
+    "!pip install z3-solver\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'BitVec' from 'z3' (/Users/smander/projects/PHD/DNN/venv/lib/python3.9/site-packages/z3/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[14], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mz3\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m BitVec, Solver, And, Or, Not\n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# Define 8-bit symbolic bit-vectors\u001B[39;00m\n\u001B[1;32m      4\u001B[0m x \u001B[38;5;241m=\u001B[39m BitVec(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mx\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;241m8\u001B[39m)  \u001B[38;5;66;03m# 8-bit integer\u001B[39;00m\n",
+      "\u001B[0;31mImportError\u001B[0m: cannot import name 'BitVec' from 'z3' (/Users/smander/projects/PHD/DNN/venv/lib/python3.9/site-packages/z3/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from z3 import BitVec, Solver, And, Or, Not\n",
+    "\n",
+    "# Define 8-bit symbolic bit-vectors\n",
+    "x = BitVec('x', 8)  # 8-bit integer\n",
+    "y = BitVec('y', 8)  # Another 8-bit integer\n",
+    "\n",
+    "# Create a solver instance\n",
+    "solver = Solver()\n",
+    "\n",
+    "# Add bitwise constraints\n",
+    "solver.add(x & y == 0x3)       # Bitwise AND constraint\n",
+    "solver.add(x | y == 0x7)       # Bitwise OR constraint\n",
+    "solver.add(x ^ y == 0x4)       # Bitwise XOR constraint\n",
+    "solver.add(Not(x == 0))        # Ensure x is not zero\n",
+    "\n",
+    "# Add additional constraints if needed\n",
+    "solver.add(x << 1 == y)        # Bitwise left shift of x by 1 should equal y\n",
+    "\n",
+    "# Check satisfiability\n",
+    "if solver.check() == z3.sat:\n",
+    "    model = solver.model()\n",
+    "    print(\"Solution found:\")\n",
+    "    print(f\"x = {model[x].as_long():02x}\")\n",
+    "    print(f\"y = {model[y].as_long():02x}\")\n",
+    "else:\n",
+    "    print(\"No solution satisfies the constraints.\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SYN-ACK Packet Model:\n",
+      "Source Port: #b0000000000000000\n",
+      "Destination Port: #b0000000001010000\n",
+      "Flags: #b00010010\n",
+      "FIN-ACK Packet Model:\n",
+      "Source Port: #b0000000000000000\n",
+      "Destination Port: #b0000000001010000\n",
+      "Flags: #b00010001\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cvc5 import Solver, Kind\n",
+    "\n",
+    "# Initialize cvc5 solver\n",
+    "solver = Solver()\n",
+    "solver.setOption(\"produce-models\", \"true\")\n",
+    "solver.setLogic(\"QF_BV\")  # Quantifier-free bit-vector logic for fixed-width fields\n",
+    "\n",
+    "# Define TCP Header Fields as symbolic bit-vectors\n",
+    "# 16-bit source port, 16-bit destination port, 8-bit flags\n",
+    "source_port = solver.mkConst(solver.mkBitVectorSort(16), \"source_port\")\n",
+    "dest_port = solver.mkConst(solver.mkBitVectorSort(16), \"dest_port\")\n",
+    "flags = solver.mkConst(solver.mkBitVectorSort(8), \"flags\")\n",
+    "\n",
+    "# Define flag bit values\n",
+    "URG_FLAG = solver.mkBitVector(8, 0x20)  # URG flag (0b00100000)\n",
+    "ACK_FLAG = solver.mkBitVector(8, 0x10)  # ACK flag (0b00010000)\n",
+    "PSH_FLAG = solver.mkBitVector(8, 0x08)  # PSH flag (0b00001000)\n",
+    "RST_FLAG = solver.mkBitVector(8, 0x04)  # RST flag (0b00000100)\n",
+    "SYN_FLAG = solver.mkBitVector(8, 0x02)  # SYN flag (0b00000010)\n",
+    "FIN_FLAG = solver.mkBitVector(8, 0x01)  # FIN flag (0b00000001)\n",
+    "\n",
+    "# Example combinations of flags\n",
+    "# SYN-ACK Packet (e.g., for connection establishment)\n",
+    "syn_ack_packet = solver.mkTerm(Kind.EQUAL, flags, solver.mkBitVector(8, 0x12))  # 0b00010010\n",
+    "\n",
+    "# FIN-ACK Packet (e.g., for connection termination)\n",
+    "fin_ack_packet = solver.mkTerm(Kind.EQUAL, flags, solver.mkBitVector(8, 0x11))  # 0b00010001\n",
+    "\n",
+    "# Add constraints to the solver\n",
+    "# Here, we can try different scenarios by asserting different flag combinations.\n",
+    "# Let's first test for a SYN-ACK packet to destination port 80\n",
+    "is_dest_port_80 = solver.mkTerm(Kind.EQUAL, dest_port, solver.mkBitVector(16, 80))\n",
+    "syn_ack_constraints = solver.mkTerm(Kind.AND, syn_ack_packet, is_dest_port_80)\n",
+    "\n",
+    "# Assert the constraints for a SYN-ACK packet\n",
+    "solver.assertFormula(syn_ack_constraints)\n",
+    "\n",
+    "# Check if there's a valid assignment (satisfiable model) for the SYN-ACK constraints\n",
+    "if solver.checkSat().isSat():\n",
+    "    # Get model and display values for source_port, dest_port, and flags\n",
+    "    model_source_port = solver.getValue(source_port)\n",
+    "    model_dest_port = solver.getValue(dest_port)\n",
+    "    model_flags = solver.getValue(flags)\n",
+    "\n",
+    "    print(\"SYN-ACK Packet Model:\")\n",
+    "    print(\"Source Port:\", str(model_source_port))\n",
+    "    print(\"Destination Port:\", str(model_dest_port))\n",
+    "    print(\"Flags:\", str(model_flags))\n",
+    "else:\n",
+    "    print(\"No satisfiable solution found for the SYN-ACK constraints.\")\n",
+    "\n",
+    "# Reset solver for another check\n",
+    "solver.resetAssertions()\n",
+    "\n",
+    "# Assert the constraints for a FIN-ACK packet to the same destination port 80\n",
+    "fin_ack_constraints = solver.mkTerm(Kind.AND, fin_ack_packet, is_dest_port_80)\n",
+    "solver.assertFormula(fin_ack_constraints)\n",
+    "\n",
+    "# Check if there's a valid assignment (satisfiable model) for the FIN-ACK constraints\n",
+    "if solver.checkSat().isSat():\n",
+    "    # Get model and display values for source_port, dest_port, and flags\n",
+    "    model_source_port = solver.getValue(source_port)\n",
+    "    model_dest_port = solver.getValue(dest_port)\n",
+    "    model_flags = solver.getValue(flags)\n",
+    "\n",
+    "    print(\"FIN-ACK Packet Model:\")\n",
+    "    print(\"Source Port:\", str(model_source_port))\n",
+    "    print(\"Destination Port:\", str(model_dest_port))\n",
+    "    print(\"Flags:\", str(model_flags))\n",
+    "else:\n",
+    "    print(\"No satisfiable solution found for the FIN-ACK constraints.\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-11-10T00:20:04.187494Z",
+     "end_time": "2024-11-10T00:20:04.195562Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Extract' from 'z3' (/Users/smander/projects/PHD/DNN/venv/lib/python3.9/site-packages/z3/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[13], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mz3\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Extract\n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# Extract the lower 4 bits of an 8-bit bit-vector\u001B[39;00m\n\u001B[1;32m      4\u001B[0m low_bits \u001B[38;5;241m=\u001B[39m Extract(\u001B[38;5;241m3\u001B[39m, \u001B[38;5;241m0\u001B[39m, x)  \u001B[38;5;66;03m# Extract bits 3 through 0 of x\u001B[39;00m\n",
+      "\u001B[0;31mImportError\u001B[0m: cannot import name 'Extract' from 'z3' (/Users/smander/projects/PHD/DNN/venv/lib/python3.9/site-packages/z3/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from z3 import Extract\n",
+    "\n",
+    "# Extract the lower 4 bits of an 8-bit bit-vector\n",
+    "low_bits = Extract(3, 0, x)  # Extract bits 3 through 0 of x\n",
+    "solver.add(low_bits == 0b0011)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import angr\n",
+    "import claripy\n",
+    "\n",
+    "# Define a binary to analyze\n",
+    "binary_path = '/path/to/binary'\n",
+    "project = angr.Project(binary_path, auto_load_libs=False)\n",
+    "\n",
+    "# Define symbolic bytes as input\n",
+    "symbolic_input = claripy.BVS('input', 8 * 4)  # 4 bytes\n",
+    "\n",
+    "# Run symbolic execution\n",
+    "state = project.factory.full_init_state(stdin=symbolic_input)\n",
+    "simgr = project.factory.simgr(state)\n",
+    "simgr.explore(find=0x400123)  # Example address to find\n",
+    "\n",
+    "# Check for solutions\n",
+    "if simgr.found:\n",
+    "    solution = simgr.found[0].solver.eval(symbolic_input, cast_to=bytes)\n",
+    "    print(f'Solution found: {solution}')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "##ПОшукати байтови SOLVER - bitwise SOLVER byteWISE"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -66,8 +277,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-11-09T20:08:54.132556Z",
-     "end_time": "2024-11-09T20:08:55.088682Z"
+     "start_time": "2024-11-09T20:33:51.268674Z",
+     "end_time": "2024-11-09T20:33:52.496584Z"
     }
    }
   },
