add additional files

--- a/CVC5.ipynb
+++ b/CVC5.ipynb
@@ -25,12 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "DEBUG (and (= flags (bvor #b00000010 #b00010000)) (= dest_port #b0000000001010000))\n",
       "SYN-ACK Packet Model:\n",
       "Source Port: #b0000000000000000\n",
       "Destination Port: #b0000000001010000\n",
@@ -54,6 +55,7 @@
     "\n",
     "# Define TCP Header Fields as symbolic bit-vectors\n",
     "\n",
+    "\n",
     "# 16-bit source port and destination port\n",
     "source_port = solver.mkConst(solver.mkBitVectorSort(16), \"source_port\")\n",
     "dest_port = solver.mkConst(solver.mkBitVectorSort(16), \"dest_port\")\n",
@@ -70,6 +72,9 @@
     "window_size = solver.mkConst(solver.mkBitVectorSort(16), \"window_size\")\n",
     "checksum = solver.mkConst(solver.mkBitVectorSort(16), \"checksum\")\n",
     "urgent_pointer = solver.mkConst(solver.mkBitVectorSort(16), \"urgent_pointer\")\n",
+    "\n",
+    "\n",
+    "#test\n",
     "\n",
     "# Define flag bit values\n",
     "URG_FLAG = solver.mkBitVector(8, 0x20)  # URG flag (0b00100000)\n",
@@ -89,6 +94,8 @@
     "\n",
     "# Combine constraints for a SYN-ACK packet directed to port 80\n",
     "syn_ack_constraints = solver.mkTerm(Kind.AND, is_syn_ack_packet, is_dest_port_80)\n",
+    "\n",
+    "print(\"DEBUG\", syn_ack_constraints)\n",
     "\n",
     "# Add constraints to the solver\n",
     "solver.assertFormula(syn_ack_constraints)\n",
@@ -117,13 +124,19 @@
     "    print(\"Checksum:\", str(model_checksum))\n",
     "    print(\"Urgent Pointer:\", str(model_urgent_pointer))\n",
     "else:\n",
-    "    print(\"No satisfiable solution found for the SYN-ACK constraints.\")\n"
+    "    print(\"No satisfiable solution found for the SYN-ACK constraints.\")\n",
+    "\n",
+    "\n",
+    "    #TODO\n",
+    "    # How to to extract from exe code and understand how instructions works with dynamic libraries\n",
+    "    # Binary - deserialize/deassembler (OBJ) instructions from binary - we need to get TEXT\n",
+    "    # INTEL X86 deassembler with use DYNAMIC LIBRARY - exe\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-11-10T17:20:11.294020Z",
-     "end_time": "2024-11-10T17:20:11.308699Z"
+     "start_time": "2024-11-11T19:25:01.159858Z",
+     "end_time": "2024-11-11T19:25:01.443881Z"
     }
    }
   },
