add new changes

--- a/Deassembler Process.ipynb
+++ b/Deassembler Process.ipynb
@@ -7355,8 +7355,8 @@
     "    cfg_analysis.display_actions()\n",
     "\n",
     "    template_builder = TemplateBuilder(cfg_analysis.project, cfg_analysis.cfg)\n",
-    "    start_action = \"call\"\n",
-    "    end_action = \"nop\"\n",
+    "    start_action = \"call\" #X1.call\n",
+    "    end_action = \"nop\"  #B.nop\n",
     "    print(\"Generating traces...\")\n",
     "    traces = template_builder.build_template(start_action, end_action)\n",
     "\n",
