--- a/Solver.ipynb
+++ b/Solver.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -134,9 +134,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-01-06T20:18:14.813544Z",
-     "end_time": "2025-01-06T20:18:14.852745Z"
+     "start_time": "2025-02-05T17:45:50.579643Z",
+     "end_time": "2025-02-05T17:45:50.608471Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
